5/21/21 - Fixed HTML {overflow} issue on XL displays

--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     margin: auto;
+    overflow: auto;
 }
 
 .titleBox {
